kubernetes/helloworld-nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworldpy-service
spec:
  ports:
  - port: 31008
    nodePort: 31008
    targetPort: py-port
    protocol: TCP
  selector:
    app: helloworldpy
  type: NodePort
